--- a/test/main.css
+++ b/test/main.css
@@ -1,3 +1,13 @@
-input {
+/* input {
   max-width: 30px;
+} */
+
+.row, .col {
+  margin: 8px;
+  padding: 4px;
+}
+
+#container {
+  background-color: rgb(148, 148, 148);
+  max-width: 500px;
 }
