--- a/Assignment2_2/my.css
+++ b/Assignment2_2/my.css
@@ -1,4 +1,17 @@
-footer {
-  /* position : fixed; */
-  /* bottom : 0; */
+@media only screen and (max-width: 768px) {
+  .year_hide {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 665px) {
+  .major_hide {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 545px) {
+  .email_hide {
+    display: none;
+  }
 }
