--- a/Assignment2_2/my.css
+++ b/Assignment2_2/my.css
@@ -2,6 +2,9 @@
   .year_hide {
     display: none;
   }
+  #header_inner {
+    max-width: 500px;
+  }
 }
 
 @media only screen and (max-width: 665px) {
